--- a/package.json
+++ b/package.json
@@ -9,16 +9,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
     "expo": "~50.0.13",
     "expo-camera": "~14.1.1",
+    "expo-media-library": "~15.9.1",
     "expo-status-bar": "~1.11.1",
     "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-native": "0.73.5",
-    "react-native-safe-area-context": "^3.3.2",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
     "react-native-svg": "^12.1.1",
-    "react-native-webview": "^13.8.2",
-    "expo-media-library": "~15.9.1"
+    "react-native-webview": "^13.8.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
