--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/material-top-tabs": "^6.6.13",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "expo": "~50.0.13",
@@ -18,9 +19,11 @@
     "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-native": "0.73.5",
+    "react-native-pager-view": "^6.2.3",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-svg": "^12.1.1",
+    "react-native-tab-view": "^3.5.2",
     "react-native-webview": "^13.8.2"
   },
   "devDependencies": {
