--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "react-native-screens": "~3.29.0",
     "react-native-svg": "^12.1.1",
     "react-native-tab-view": "^3.5.2",
-    "react-native-webview": "^13.8.2"
+    "react-native-webview": "^13.8.2",
+    "react-native-maps": "1.10.0",
+    "expo-location": "~16.5.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
